--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@ image: /images/pdis-team.jpg
 <div class="container">
     <div class="section no-pad-bot" id="index-banner" >
         <div class="swiper-container" style="width:100%">
-
           <div class="swiper-wrapper">
             <!-- should read slides from data -->
             <div class="swiper-slide">
               <div class="contain" style="overflow: hidden;line-height: 0;">
-              <img src="{{ page.image }}" alt="" srcset="" class="team-img">
-              <div class="cta-block">
+                <img src="{{ page.image }}" alt="" srcset="" class="team-img">
+                <div class="cta-block">
                   <h1 class="header white-text notranslate">
                     {% t site.title %}
                   </h1>
@@ -31,25 +30,23 @@ image: /images/pdis-team.jpg
                   </div>
                 </div>
               </div>
-
             </div>
-
             <div class="swiper-slide">
               <div class="iframeWrapper">
                 <iframe allowtransparency="true" scrolling="no" src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fshu.w.zhengwei%2Fvideos%2F225723507918927%2F%3Fl%3D598307961771178061&amp;show_text=false&amp;show_captions=true&amp;appId" frameborder="0"></iframe>
               </div>
             </div>
-
             <div class="swiper-slide">
               <div class="iframeWrapper">
                 <iframe allowtransparency="true" scrolling="no" src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fshu.w.zhengwei%2Fvideos%2F161981934293085%2F%3Fl%3D598307961771178061&amp;show_text=false&amp;show_captions=true&amp;appId" frameborder="0"></iframe>
               </div>
             </div>
-
           </div>
-          <div class="swiper-pagination"></div>
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
+          <div class="swiper-controll center">
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-pagination"></div>
+            <div class="swiper-button-next"></div>
+          </div>
         </div>
 
       </div>
