--- a/pages/track.html
+++ b/pages/track.html
@@ -3,7 +3,7 @@ layout: page
 title: 工作紀錄
 permalink: /track/
 ---
-{% assign tracksByDate = site.data.tracks | group_by:"date" %}
+{% assign tracksByDate = site.data.tracks_json | group_by:"date" %}
 <script>
 
 function getMap(){ // 產生tag
