--- a/pages/track.html
+++ b/pages/track.html
@@ -3,7 +3,12 @@ layout: page
 title: 工作紀錄
 permalink: /track/
 ---
-{% assign tracksByDate = site.data.tracks_json | group_by:"date" %}
+{% if site.data.tracks_json %}
+{% assign tracks = site.data.tracks_json %}
+{% else %}
+{% assign tracks = site.data.tracks %}
+{% endif %}
+{% assign tracksByDate = tracks | group_by:"date" %}
 <script>
 
 function getMap(){ // 產生tag
