--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ image: /images/pdis-team.jpg
                   <div>
                     <a href="{{ 'contact' | relative_url }}" id="download-button" class="btn-large waves-effect waves-light {{ page.btn_color }}">
                       {% t site.contact %}
-                      <i class="material-icons right notranslate">send</i>
+                      <i class="material-icons right notranslate">mail_outline</i>
                     </a>
                   </div>
                 </div>
@@ -65,6 +65,12 @@ image: /images/pdis-team.jpg
             <h2 class="center {{ page.color }}"><i class="material-icons notranslate">{{ feature.icon }}</i></h2>
             <h5 class="center">{{ feature.title }}</h5>
             <p class="light">{{ feature.content }}</p>
+            <div class="center">
+              <a href="{{ feature.link }}" target="_blank" class="btn waves-effect waves-light {{ page.btn_color }}">
+                {% t site.more %}
+                <i class="material-icons right notranslate">open_in_new</i>
+              </a>
+            </div>
           </div>
         </div>
       {% endfor %}
