--- a/base.html
+++ b/base.html
@@ -3,24 +3,22 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
-    
         <title>Public Digital Innovation Space - 公共數位創新空間</title>
         <meta name="description" content="We incubate and facilitate public digital innovation and service.">
-    
         <meta property="og:title" content="Public Digital Innovation Space - 公共數位創新空間">
+        <meta property="og:description" content="We incubate and facilitate public digital innovation and service.">
         <meta property="og:url" content="/">
         <meta property="og:image" content="/images/pdis-team.jpg">
         <meta property="og:type" content="article">
-        <meta property="og:description" content="We incubate and facilitate public digital innovation and service.">
+        <meta property="twitter:title" content="Public Digital Innovation Space - 公共數位創新空間" />
     </head>
-
-<body>
-<script>
-    var lang = navigator.language || navigator.userLanguage;
-    if (lang.indexOf('zh-TW') == 0)
-        window.location = '/zh-TW/';
-    else
-        window.location = '/en/';
-</script>
-</body>
+    <body>
+    <script>
+        var lang = navigator.language || navigator.userLanguage;
+        if (lang.indexOf('zh-TW') == 0)
+            window.location = '/zh-TW/';
+        else
+            window.location = '/en/';
+    </script>
+    </body>
 </html>
