add i18n to seo title for page layout

--- a/pages/track.html
+++ b/pages/track.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: 工作紀錄
+title: site.track
 permalink: /track/
 ---
 {% assign tracks = site.data.tracks_json | default: site.data.tracks %}
