Add feature contents

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ image: /images/pdis-team.jpg
           <h2 class="center {{ page.color }}"><i class="material-icons notranslate">{{ feature.icon }}</i></h2>
           <!-- <div class="center"><img src="{{ feature.image }}" /></div> -->
           <h5 class="center">{{ feature.title }}</h5>
-          <!--           <p class="light">{{ feature.content }}</p> -->
+          <p class="light center">{{ feature.content }}</p>
           <div class="center">
             <a href="{{ feature.link }}" target="_blank" class="btn waves-effect waves-light {{ page.btn_color }}">
               {% t site.more %}
