--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,6 +12,19 @@ memberList:
   {% tf pages/contact.html %}
 </section>
 
+<div class="row">
+  <div class="col s12 m6">
+    <div class="center">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14459.815598845513!2d121.50762699054432!3d25.03563850647855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xecd722722a08f5ed!2z6KGM5pS_6Zmi!5e0!3m2!1szh-TW!2stw!4v1603205347212!5m2!1szh-TW!2stw" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    </div>
+  </div>
+  <div class="col s12 m6">
+    <div class="center">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14460.07683940959!2d121.52565143512439!3d25.033422142810277!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xa055f2f16c67c77d!2z56S-5pyD5Ym15paw5a-m6amX5Lit5b-D!5e0!3m2!1szh-TW!2stw!4v1603205411078!5m2!1szh-TW!2stw" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    </div>
+  </div>
+</div>
+
 {% for status in page.memberList %}
 <h3 class="center">{% t contact-us.{{status}} %}</h3>
 {% assign people = site.data.authors | where:"status",status %}
