add some cc license declaration

--- a/pages/track.html
+++ b/pages/track.html
@@ -102,6 +102,10 @@ document.addEventListener('DOMContentLoaded', function(){
   </div>
 </div>
 
+<div class="section">
+  <p>{% t track.license %}</p>
+</div>
+
 <div class="tracks section">
   <div class="collection">
     {% for dateGroup in tracksByDate %}
