--- a/zh-TW/contact/index.html
+++ b/zh-TW/contact/index.html
@@ -615,7 +615,7 @@
   <div class="card-panel grey lighten-5 z-depth-1 grid-item">
     <div class="row" style="margin: 0 -1em;">
       <div class="col s4">
-        <img src="https://i.imgur.com/OGr3YPL.jpg" alt="周詳" class="circle responsive-img">
+        <img src="https://pdis.nat.gov.tw/images/pdis-logo-final-inverse.png" alt="周詳" class="circle responsive-img">
       </div>
       <div class="col s8">
         <h6><span>周詳</span> <span>Sean Chou</span></h6>
