--- a/en/contact/index.html
+++ b/en/contact/index.html
@@ -10,7 +10,7 @@
     <link rel="canonical" href="https://pdis.nat.gov.tw/en/contact/" />
     <meta property="og:url" content="https://pdis.nat.gov.tw/en/contact/" />
     <meta name="twitter:card" content="summary" />
-    <meta property="twitter:title" content="Contact Us" />
+    <meta property="twitter:title" content="Contact Us" /
     <meta name="twitter:site" content="@TaiwanPDIS" />
     <meta name="twitter:creator" content="@PDIS" />
     <meta property="fb:admins" content="100014438376965" />
@@ -615,7 +615,7 @@
   <div class="card-panel grey lighten-5 z-depth-1 grid-item">
     <div class="row" style="margin: 0 -1em;">
       <div class="col s4">
-        <img src="https://i.imgur.com/OGr3YPL.jpg" alt="周詳" class="circle responsive-img">
+        <img src="https://pdis.nat.gov.tw/images/pdis-logo-final-inverse.png" alt="周詳" class="circle responsive-img">
       </div>
       <div class="col s8">
         <h6><span>周詳</span> <span>Sean Chou</span></h6>
