deploy: 123f290b8755b77bf5a0ca3c1dff10a0cf65c6e7

--- a/en/index.html
+++ b/en/index.html
@@ -429,10 +429,10 @@
             2023-01-12
           </time>
         </span>
-        <h5 class="title">The era of a group of accounts going all over the Internet has come</h5>
+        <h5 class="title">The era of password-free login has arrived</h5>
         <p class='content container'>
            
-               Participate in the formulation of standards and synchronize with the world.
+               Participate in the formulation of standards and interoperate with the world.
            
         </p>
       </a>
